# coreml_jni

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.gradle  coreml_detector.py  publish.gradle
.cache/clangd/index/: CoreMLDetector.h.08AB873CCC8B7966.idx  CoreMLDetector.mm.80D8B01379F3D976.idx  coreml_jni.cpp.7B5D929BB8378806.idx  coreml_jni.h.E39B4BA6FA21E453.idx  wpi_jni_common.h.21F8F1D07C0EFE63.idx
.github/workflows/: main.yml
scripts/: README.md  coreml_description.py  coreml_model_convert.py  coreml_model_detector.py  export_coreml.py  requirements.txt
src/main/java/org/atomstorm/coreml/: CoreMLJNI.java
src/main/java/org/photonvision/coreml/: CoreMLJNI.java
src/main/native/cpp/: coreml_jni.cpp  coreml_jni.h
src/main/native/objc/: CoreMLDetector.h  CoreMLDetector.mm  CoreMLUtils.h  CoreMLUtils.mm  Log.h  PixelBufferPool.h  PixelBufferPool.mm  coreml_jni.cpp  coreml_jni.h  wpi_jni_common.h
src/test/java/org/atomstorm/coreml/: CoreMLBaseTest.java  CoreMLDetectionTest.java  CoreMLTestUtils.java  CoreMLThreadSafetyTest.java
src/test/java/org/photonvision/coreml/: CoreMLBaseTest.java  CoreMLDetectionTest.java  CoreMLTest.java  CoreMLTestUtils.java  CoreMLThreadSafetyTest.java
